--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,24 +5,23 @@
   <script type='text/javascript'>
 
 $(document).ready(function() {
-$('#calendar').fullCalendar({
-  header: {
-    left: 'today prev,next',
-    center: 'title',
-    right: 'month,basicWeek,basicDay,agendaWeek'
-  },
-  googleCalendarApiKey: 'AIzaSyCnoJx_BOn2sQ_8LN3rUQ1BMjw1F0JKAOE',
-  eventSources: [{
-    googleCalendarId: 'rballonline@gmail.com',
-    className: 'mainEvents'
-  },
-  {
-    googleCalendarId: '88figau3ee9kuellodmi9mhc5ub5p960@import.calendar.google.com',
-    className: 'schoolEvents'
-  }]
+  $('#calendar').fullCalendar({
+    header: {
+      left: 'today prev,next',
+      center: 'title',
+      right: 'month,basicWeek,basicDay'
+    },
+    googleCalendarApiKey: 'AIzaSyCnoJx_BOn2sQ_8LN3rUQ1BMjw1F0JKAOE',
+    eventSources: [{
+      googleCalendarId: 'rballonline@gmail.com',
+      className: 'mainEvents'
+    },
+    {
+      googleCalendarId: '88figau3ee9kuellodmi9mhc5ub5p960@import.calendar.google.com',
+      className: 'schoolEvents'
+    }]
+  });
 });
-});
-
 </script>
 </head>
 <body>
