--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,5 +5,6 @@
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.7.1/fullcalendar.min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.7.1/gcal.js"></script>
+<script type="text/javascript" src="jquery.simpleWeather.min.js"></script>
 <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.7.1/fullcalendar.min.css" />
 <link rel="stylesheet" type="text/css" href="ionicons.min.css" />
