--- a/views/pages/weather.ejs
+++ b/views/pages/weather.ejs
@@ -4,6 +4,26 @@
   <% include ../partials/header.ejs %>
   <script type='text/javascript'>
 $(document).ready(function() {
+  $.simpleWeather({
+    location: 'Corona, CA',
+    woeid: '',
+    unit: 'f',
+    success: function(weather) {
+      html = '<h2>'+weather.temp+'&deg;'+weather.units.temp+'</h2>';
+      html += '<ul><li>'+weather.city+', '+weather.region+'</li>';
+      html += '<li class="currently">'+weather.currently+'</li>';
+      html += '<li>'+weather.alt.temp+'&deg;C</li></ul>';
+
+      for(var i=0;i<weather.forecast.length;i++) {
+        html += '<p>'+weather.forecast[i].day+': '+weather.forecast[i].high+'</p>';
+      }
+
+      $("#weather").html(html);
+    },
+    error: function(error) {
+      $("#weather").html('<p>'+error+'</p>');
+    }
+  });
 });
 </script>
 </head>
