--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,5 +6,7 @@
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.7.1/fullcalendar.min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.7.1/gcal.js"></script>
 <script type="text/javascript" src="jquery.simpleWeather.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/qtip2/3.0.3/jquery.qtip.min.js"></script>
 <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.7.1/fullcalendar.min.css" />
 <link rel="stylesheet" type="text/css" href="ionicons.min.css" />
+<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/qtip2/3.0.3/jquery.qtip.min.css" />
