--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -13,7 +13,7 @@
         <a href="#"><i class="ionicons ion-clock"></i> <span id="time"></span></a>
       </li>
       <li class="navbar-right">
-        <a href="#">Corona, CA <span id="weather"></span></a>
+        <a href="#"><span id="currentTemp"></span></a>
       </li>
     </ul>
   </div>
@@ -33,10 +33,10 @@ $(document).ready(function() {
     success: function(weather) {
       html = weather.temp+'&deg;'+weather.units.temp;
 
-      $("#weather").html(html);
+      $("#currentTemp").html(html);
     },
     error: function(error) {
-      $("#weather").html('');
+      $("#currentTemp").html('');
     }
   });
 });
