--- a/views/pages/weather.ejs
+++ b/views/pages/weather.ejs
@@ -9,10 +9,20 @@ $(document).ready(function() {
     woeid: '',
     unit: 'f',
     success: function(weather) {
-      html = '<h2>'+weather.temp+'&deg;'+weather.units.temp+'</h2>';
+      html = '<div class="well"><h2>'+weather.temp+'&deg;'+weather.units.temp+'</h2>';
+      html = '<h2><i class="icon-'+weather.code+'"></i> '+weather.temp+'&deg;'+weather.units.temp+'</h2>';
       html += '<ul><li>'+weather.city+', '+weather.region+'</li>';
       html += '<li class="currently">'+weather.currently+'</li>';
-      html += '<li>'+weather.alt.temp+'&deg;C</li></ul>';
+      html += '<li>Sunrise ' + weather.sunrise + '</li>'
+      html += '<li>Sunset ' + weather.sunset + '</li>';
+      html += '<li>'+weather.wind.direction+' '+weather.wind.speed+' '+weather.units.speed+'</li></ul>';
+
+      html += '<ul><li><b>'+moment().format('MMMM Do YYYY') + '</b></li>'
+      html += '<li><img src="'+ weather.image + '" /></li>'
+      html += '<li>High: '+weather.high+' Low: '+weather.low+'</li>';
+      html += '<li>'+weather.city+', '+weather.region+'</li>';
+      html += '<li class="currently">'+weather.currently+'</li>';
+      html += '<li>'+weather.alt.temp+'&deg;C</li></ul></div>';
 
       for(var i=0;i<weather.forecast.length;i++) {
         html += '<p>'+weather.forecast[i].day+': '+weather.forecast[i].high+'</p>';
